initial routing changes

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,1 +1,62 @@
-<p>about works!</p>
+<body>
+    <div class="container-fluid">
+        <app-header></app-header>
+    </div>
+
+<br>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2> SP INVESTMENT AND DEVELOPMENT COMPANY PVT LTD is a Private company
+                        incorporated December 1988. </h2>
+                    <p>
+                        As per the Companies Act, 1956, a Section 25 company — similar to what is defined under Section
+                        8 under Companies Act, 2013 — is a not-for-profit charitable company formed with the sole object
+                        of “promoting commerce, art, science, religion, charity, or any other useful object, and intends
+                        to apply its profits.</p>
+                    <p>
+                        At SPIDC, we believe in the power of collective action to create positive and lasting change in
+                        the world. Founded with a vision of a more equitable and compassionate society, we are a social
+                        welfare company dedicated to addressing pressing issues and improving the well-being of
+                        individuals and communities.</p>
+
+                    <h3>Our Mission</h3>
+                    <p>
+                        Our mission is simple yet profound: to foster social welfare by championing initiatives that
+                        empower, uplift, and transform lives. We are committed to creating sustainable solutions that
+                        tackle the root causes of societal challenges, working towards a future where everyone has the
+                        opportunity to thrive.
+                    </p>
+                    <p>Focus on Impact-Driven Approach, Every project, program, and partnership is meticulously designed
+                        to maximize positive outcomes. We measure success not just in numbers but in the tangible
+                        improvements in the lives of those we serve.</p>
+                    <p>
+                        We believe in the strength of partnerships. By collaborating with Govt organizations and other
+                        organization. businesses, and individuals, we amplify our impact and create a network of
+                        change-makers dedicated to social welfare.
+                    </p>
+                    <p> Openness and transparency are at the core of our values. We keep our stakeholders informed about
+                        our activities, progress, and challenges, fostering trust and accountability.</p>
+                    <p>
+                        Our work spans a diverse range of social issues, including but not limited to:
+                        Empowering individuals through education to break the cycle of poverty and build a more
+                        knowledgeable and skilled society.</p>
+                    <p>
+                        Ensuring access to quality healthcare services and promoting wellness for all, irrespective of
+                        socio-economic status.</p>
+                    <p>
+                        Investing in sustainable community projects that enhance infrastructure, economic opportunities,
+                        and overall well-being.</p>
+                    <p>
+                        Recognizing the interdependence of social and environmental well-being, we actively pursue
+                        initiatives that promote ecological sustainability.</p>
+
+
+                </div>
+            </div>
+        </div>
+
+        <app-footer></app-footer>
+
+</body>
