--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -23,9 +23,9 @@
 <div>
     <ul class="nav justify-content-center nav-bg">
         <li class="nav-item"> <a class="nav-link active" href="#home">HOME</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="about">ABOUT US</a></li>
         <li class="nav-item"><a class="nav-link" href="#services-container">OUR SERVICES</a></li>
-        <li class="nav-item"><a class="nav-link" href="client-section#">GALLERY</a></li>
+        <li class="nav-item"><a class="nav-link" href="#client-section">GALLERY</a></li>
         <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT US</a></li>
     </ul>
 
