--- a/src/app/modules/registrationform/registrationform.component.html
+++ b/src/app/modules/registrationform/registrationform.component.html
@@ -1,1 +1,53 @@
-<p>registrationform works!</p>
+
+
+<section id="contact">
+    <div class="register" style="text-align: center;font-size: 22px;  line-height: 22px;    font-weight: bold;">REGISTRATION FORM</div>
+    <div class="row">
+      <div id="contact-box">
+        <form action="">
+          <div class="form-group">
+            <label for="name">Name: </label>
+            <input type="text" name="name" id="name" placeholder="Enter your name">
+          </div>
+          <div class="form-group">
+            <label for="name">Present Address: </label>
+            <input type="text" name="address" id="address" placeholder="Enter your present Address">
+          </div>
+          <div class="form-group">
+            <label for="name">Date Of Birth: </label>
+            <input type="text" name="dob" id="dob" placeholder="Enter your DOB">
+          </div>
+          <div class="form-group">
+            <label for="name">Occupation: </label>
+            <input type="text" name="Occupation" id="Occupation" placeholder="Enter your Occupation">
+          </div>
+          <div class="form-group">
+            <label for="name">Marital Status: </label>
+            <input type="text" name="marital" id="marital" placeholder="Enter your Marital status">
+          </div>
+          <div class="form-group">
+            <label for="name">Education Qualification: </label>
+            <input type="text" name="education" id="education" placeholder="Enter your Qualification">
+          </div>
+          <div class="form-group">
+            <label for="name">Name of Nominee: </label>
+            <input type="text" name="nomiee" id="name" placeholder="Enter your nominee">
+          </div>
+          <div class="form-group">
+            <label for="email">Email: </label>
+            <input type="email" name="name" id="email" placeholder="Enter your email">
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone Number: </label>
+            <input type="phone" name="name" id="phone" placeholder="Enter your phone">
+          </div>
+          <div class="form-group">
+            <label for="message">Message: </label>
+            <textarea name="message" id="message" cols="30" rows="4"></textarea>
+          </div>
+
+          <button class="btn form-register-btn">Submit</button>
+        </form>
+      </div>
+    </div>
+  </section>
