--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,17 +1,13 @@
 <body>
-    <div class="container-fluid">
-        <app-header></app-header>
-    </div>
-
-<br>
-
+    <app-header></app-header>
+      
         <div class="container">
+            <div id="about">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2> SP INVESTMENT AND DEVELOPMENT COMPANY PVT LTD is a Private company
-                        incorporated December 1988. </h2>
-                    <p>
-                        As per the Companies Act, 1956, a Section 25 company — similar to what is defined under Section
+                    <br/><br/>
+                    <p> <span class="bold">SP INVESTMENT AND DEVELOPMENT COMPANY PVT LTD</span> is a Private company
+                        incorporated December 1988. As per the Companies Act, 1956, a Section 25 company — similar to what is defined under Section
                         8 under Companies Act, 2013 — is a not-for-profit charitable company formed with the sole object
                         of “promoting commerce, art, science, religion, charity, or any other useful object, and intends
                         to apply its profits.</p>
@@ -21,7 +17,7 @@
                         welfare company dedicated to addressing pressing issues and improving the well-being of
                         individuals and communities.</p>
 
-                    <h3>Our Mission</h3>
+                    <div class="section-heading">Our Mission</div>
                     <p>
                         Our mission is simple yet profound: to foster social welfare by championing initiatives that
                         empower, uplift, and transform lives. We are committed to creating sustainable solutions that
@@ -52,11 +48,12 @@
                         Recognizing the interdependence of social and environmental well-being, we actively pursue
                         initiatives that promote ecological sustainability.</p>
 
-
+                        <br/>
                 </div>
             </div>
         </div>
 
-        <app-footer></app-footer>
+</div>
 
+<app-footer></app-footer>
 </body>
