--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -16,20 +16,42 @@
     </div>
 </div>
 
-<!-- bottom header code start -->
+<!-- bottom navbar  code start -->
 <div>
-    <ul class="nav justify-content-center nav-bg">
-        <li class="nav-item"><a class="nav-link active" href="#home">HOME</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="about">ABOUT US</a></li>
-        <li class="nav-item"><a class="nav-link" href="#services-container">OUR SERVICES</a></li>
-        <li class="nav-item"><a>OUR TENDERS<i class="fa fa-angle-down"></i></a>
-        <ul class="sub_menu pages">
-            <li><a href="../assets/image/School Stationary.pdf">Education Tender</a></li>
-            <li><a href="../assets/image/Exbition.pdf"></a>Material Supply Tender</li>
-            <li><a></a>Tender Enquiry</li>
+    <nav class="navbar navbar-expand-lg  nav-shadow">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="about">ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="">OUR SERVICES</a>
+              </li>
+              <!-- Dropdown menu -->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">OUR TENDERS</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="../assets/image/school_stationary.pdf">Education Tender</a></li>
+                  <li><a class="dropdown-item" href="../assets/image/material_supply.pdf">Material Supply Tender</a></li>
+                  <li><a class="dropdown-item" href="#">Tender Enquiry</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="">GALLERY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="">CONTACT US</a>
+              </li>
             </ul>
-        <li class="nav-item"><a class="nav-link" href="#client-section">GALLERY</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="registrationform">CONTACT US</a></li>
-    </ul>
-
+          </div>
+        </div>
+      </nav>
+ 
 </div>
