--- a/src/app/modules/header/header.component.scss
+++ b/src/app/modules/header/header.component.scss
@@ -37,8 +37,13 @@
 }
 
 
-.nav-bg{background-color: #f2f2f2!important;
-    padding: 15px 0px;}
+.nav-bg{
+    padding: 15px 0px;
+}
+.nav-shadow{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    background-color: #ffffff!important;
+}
 
     .nav-item a{
         color: #333;
@@ -51,8 +56,8 @@
         
     }
     .nav-item a:hover{
-        color: #000000;
-        background-color: bisque;
+        color: #FFFFFF;
+        background-color: rgb(247, 146, 24);
         font-size: 14px;
         font-weight: 700;
         line-height: 20px;
@@ -60,8 +65,15 @@
         padding: 10px 15px;
         margin: 0px 5px;
         border-radius: 10px;
+        width: auto;
+        cursor: pointer;
     }
     
+    .active {
+        color: #FFFFFF!important;
+        background-color: rgb(247, 146, 24);
+        border-radius: 10px;
+      }
 
 
 
