--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,10 @@
     box-sizing: border-box;
 }
 
-body {
-    padding: 0px;
-    margin: 0px;
-
+.section-heading{
+    font-size: 24px;
+    line-height: 30px;
+    color: #000000;
+    font-weight: 700;
+    padding: 15px 0px;
 }
