--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -25,11 +25,11 @@
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/">HOME</a>
+              <li class="nav-item" >
+                <a class="nav-link " routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="about">ABOUT</a>
+                <a class="nav-link" routerLink="/about" routerLinkActive="active">ABOUT</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="">OUR SERVICES</a>
