enquiry form commit

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -40,7 +40,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="../assets/image/school_stationary.pdf">Education Tender</a></li>
                   <li><a class="dropdown-item" href="../assets/image/material_supply.pdf">Material Supply Tender</a></li>
-                  <li><a class="dropdown-item" href="#">Tender Enquiry</a></li>
+                  <li><a class="dropdown-item" routerLink="/enquiryform">Tender Enquiry</a></li>
                 </ul>
               </li>
               <li class="nav-item">
