navbar toggle issue and favicon change

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -19,8 +19,8 @@
 <!-- bottom navbar  code start -->
 <div>
     <nav class="navbar navbar-expand-lg  nav-shadow">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid toggle-positon" >
+          <button class="navbar-toggler toggle-icon" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
