--- a/src/app/modules/header/header.component.scss
+++ b/src/app/modules/header/header.component.scss
@@ -81,7 +81,7 @@
 // mobile responsive code
 @media screen and (max-width: 767px){
     #header{
-        padding: 0px 0px 0px 0px;
+        padding: 10px 0px 10px 0px;
      .header-flex{
         display: flex;
         justify-content: space-between;
@@ -104,7 +104,26 @@
         }
        
      }
+    
         
     }
+    .navbar-nav{
+        margin-top: 10px!important;
+     }
+    
+.toggle-positon{
+display: flex;
+justify-content: flex-end;
 
+
+}
+.toggle-icon{
+    background-color: transparent;
+    border: solid 2px rgb(247, 146, 24);
+    
+}
+
+.nav-shadow .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2895, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
 }
