--- a/src/app/modules/registrationform/registrationform.component.html
+++ b/src/app/modules/registrationform/registrationform.component.html
@@ -1,7 +1,9 @@
-
-
+<body>
+<app-header></app-header>
+      
+<div class="container">
 <section id="contact">
-    <div class="register" style="text-align: center;font-size: 22px;  line-height: 22px;    font-weight: bold;">REGISTRATION FORM</div>
+    <div class="register-heading">REGISTRATION FORM</div>
     <div class="row">
       <div id="contact-box">
         <form action="">
@@ -47,7 +49,11 @@
           </div>
 
           <button class="btn form-register-btn">Submit</button>
+          <br/>
         </form>
       </div>
     </div>
   </section>
+</div>
+<app-footer></app-footer>
+</body>
