--- a/src/app/modules/registrationform/registrationform.component.scss
+++ b/src/app/modules/registrationform/registrationform.component.scss
@@ -4,6 +4,14 @@
     width: 60%;
 }
 label{font-weight: bold;}
+.register-heading{
+    font-size: 24px;
+    line-height: 30px;
+    color: #000000;
+    font-weight: 700;
+    padding: 15px 0px;
+    text-align: center;
+}
 }
 
 #contact-box input,
@@ -49,4 +57,25 @@ label{font-weight: bold;}
     width: 100%;
     cursor: pointer;
 
+}
+
+
+@media only screen and (max-width: 767px) {
+    #contact{
+        padding: 10px 0px 10px 0px;
+    #contact-box form {
+        width: 90%;
+    }
+    .register-heading{
+        font-size: 16px;
+        line-height: 22px;
+        color: #000000;
+        font-weight: 700;
+        padding: 10px 0px;
+        text-align: center;
+    }
+    
+    }
+    
+    
 }
