--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -38,8 +38,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">OUR TENDERS</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="../assets/image/school_stationary.pdf">Education Tender</a></li>
-                  <li><a class="dropdown-item" href="../assets/image/material_supply.pdf">Material Supply Tender</a></li>
+                  <li><a class="dropdown-item" href="../assets/image/School Items.pdf">Education Tender</a></li>
+                  <li><a class="dropdown-item" href="../assets/image/Material Supply.pdf">Material Supply Tender</a></li>
                   <li><a class="dropdown-item" routerLink="/enquiryform">Tender Enquiry</a></li>
                 </ul>
               </li>
